stop dateline from wrapping

--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -51,6 +51,6 @@
     display: none;
 
     @include mq(mobileLandscape) {
-        display: block;
+        display: inline;
     }
 }
